notificationer.css
#notifications-container {
    height: 98vh;
    position: absolute;
    z-index: -1; /* Does not overlap other items */
}
.notification {
    display: flex;
    z-index: 2; /* Display notifications above other items */
    position: relative;
    align-items: center;
    justify-content: space-around;
    margin-top: 6px;
    word-break: break-word;
    
    border-radius: 8px;
    font-size: 18px;
    padding: 15px 15px 15px 10px;
    
    transition: left 0.5s, right 0.5s;
}
.notification-yellow {
    background-image: linear-gradient(134deg, #f9c44d, #ff7905);
    border: 1px solid red;
}
.notification-green {
    background-image: linear-gradient(134deg, #64f94d, #00d857);
    border: 1px solid green;
}
.notification-red {
    background-image: linear-gradient(134deg, #ff6060, #f43434);
    border: 1px solid darkred;
}
.notification-blue {
    background-image: linear-gradient(134deg, #6096FF, #3B7FF9);
    border: 1px solid blue;
}
#notification img {
    height: 60px;
}
.notification-content {
    padding-right: 21px; /* Not collide with [x] */
}
.icon-close {
    position: absolute;
    top: 10px;
    right: 10px;
    border-radius: 100%;
    width: 20px;
    height: 20px;
    display: flex;
    justify-content: center;
    align-items: center;
    border: 1px solid black;
    background-color: red;
    cursor: pointer;
}
.icon-close:hover {
    background-color: #b60c0c;
    position: absolute; /* Position not inherited */
    top: 10px;
    right: 10px;
}

